# QuadraticEquationSolver

./: .gitignore  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QuadraticEquationSolver.cpp  QuadraticEquationSolver.h  README.md  Robustness_Precision.md  demo.cpp
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-multi-platform.yml
test/: double_test.cpp  float_test.cpp  test.h
